Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- i18n fix on role labels translations (Member & Manager)
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-